--- a/views/great_hall.ejs
+++ b/views/great_hall.ejs
@@ -10,7 +10,7 @@
         <div class="col center row s12 m12">
         <div class="card gh_data bold col s12 m4 offset-m4">
             <% if(charData.length != 0) { %>
-            <table class="card-content center striped">
+            <table class="card-content card center striped">
                 <thead>
                     <tr>
                         <th class="card header row center">Name</th>
@@ -33,7 +33,6 @@
             <% } else { %>
             <p>You have not added any Characters.</p>
             <% } %>
-        </div>
         </div>
     </div>
 </div>
