--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,28 @@
 
 <div class="row">
-    <div class="col center s12 m12">
-        <div class="card col s12 m6 offset-m3">
+    <div class="hogwarts_crest col s12 m5 ">
+        <div class="card col s12 m12">
             <div class="card-content col s12 m12">
                 <a
-                href="../houses/common_room/gryffindor"
+                href="/great_hall"
+                class="card col s12 m12 center-align hogwarts_card waves-effect waves-light"
+            >
+                <div>
+                    <img
+                        src="../images/hogwarts_crest.png"
+                        width="150px"
+                        alt="hogwarts crest"
+                    />
+                </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m7 ">
+        <div class="card col s12 m12 ">
+            <div class="card-content col s12 m12 ">
+                <a
+                href="../houses/common_room/Gryffindor"
                 class="card col s6 m6 center-align gryffindor gryffindor-card waves-effect waves-light"
             >
                 <div class="card-title bold">
@@ -20,9 +38,9 @@
                         alt="gryffindor house crest"
                     />
                 </div>
-            </a>
-            <a
-                    href="../houses/common_room/slytherin"
+                </a>
+                <a
+                    href="../houses/common_room/Slytherin"
                     class="card col s6 m6 center-align slytherin slytherin-card waves-effect waves-light"
                 >
                     <div class="card-title bold">
@@ -41,17 +59,16 @@
                     </div>
                 </a>
                 <a
-                    href="../houses/common_room/hufflepuff"
+                    href="../houses/common_room/Hufflepuff"
                     class="card col s6 m6 center-align hufflepuff hufflepuff-card waves-effect waves-light"
                 >
                     <div class="card-title bold">
                         Hufflepuff
+                        
                     </div>
-                    <div>
-                        <p>
                             True and Unafraid of Toil
-                        </p>
-
+                    <div>
+                        
                         <img
                             src="../images/hufflepuff_crest.webp"
                             width="150px"
@@ -60,7 +77,7 @@
                     </div>
                 </a>
                 <a
-                    href="../houses/common_room/ravenclaw"
+                    href="../houses/common_room/Ravenclaw"
                     class="card col s6 m6 center-align ravenclaw ravenclaw-card waves-effect waves-light"
                 >
                     <div class="card-title bold">
@@ -82,4 +99,4 @@
         </div>
     </div>
 </div>
-<h3 class="row center">Tap on the House Crest to visit the house's common room.</h3>
+<h3 class="row center">Tap To Enter.</h3>
