--- a/views/houses/common_room.ejs
+++ b/views/houses/common_room.ejs
@@ -1,52 +1,39 @@
 <div class="<%=room %>_room">
-    <h3><%= room.toUpperCase()%></h3>
-    <div class="row">
-        <div class="col s6 m4">
-            <% if(charData.length != 0) { %>
-                <div class="card">
-                    <table class="striped">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% charData.forEach( el => { %>
-                            <tr>
-                                <td>
-                                    <a href="./person/<%=el._id%>"> <%= el.name %> </a>
-                                </td>
-                                <td>
-                                    <span class="dash-status"> <%= el.status %> </span>
-                                </td>
-                            </tr>
-                            <% }) %>
-                        </tbody>
-                    </table>
-            <% } else { %>
-                    <p>You have not added any Characters.</p>
-                </div>
-            <% } %>
-        </div>
-        <div class="col s6 m2">
-            <div class="card center-align <%= room.house %>_info">
-                <div class="card-content ">
-                    <p> <%= room.description%></p>
-                </div>
-                <div class="cards-tabs">
-                    <ul class="tabs tabs_fixed_width">
-                        <li class="tab">
-                            <a href="#location">Location</a>
-                        </li>
-                        <li class="tab"><a href="#security">Security</a></li>
-                    </ul>
-                </div>
-                <div class="card-content">
-                    <div id="location"><%= room.location %></div>
-                    <div id="security"><%= room.security %></div>
+    <div class=" row img_fit">
+        <div class="col center row s12 m12">
+            <div class="card col s12 m6 offset-m3 <%= room %>_data <%= room %>_name">
+                <div class="card-content center">
+                    <h3 class="bold"><%= room%></h3>
                 </div>
             </div>
         </div>
+        <div class=" col center row s12 m12">
+           <div class="card <%= room%>_table_right <%= room %>_data bold col s12 m4">
+                <% if(charData.length != 0) { %>
+                <table class="card-content card center striped">
+                    <thead>
+                        <tr>
+                            <th class="card row ">Name</th>
+                            <th class=" bold card row ">Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% charData.forEach( el => { %>
+                        <tr>
+                            <td>
+                                <a href="/houses/person/<%=el._id%>"> <%= el.name %> </a>
+                            </td>
+                            <td>
+                                <span class="dash-status"> <%= el.status %> </span>
+                            </td>
+                        </tr>
+                        <% }) %>
+                    </tbody>
+                </table>
+                <% } else { %>
+                <p>You have not added any Characters.</p>
+                <% } %>  
+                </div>
+            </div> 
+        </div>
     </div>
-</div>
