--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,10 +12,10 @@
         <ul class="sidenav" id="mobile-demo">
             
             <li><a class="great_hall bold" href="/great_hall">Great Hall</a></li>
-            <li><a class="gryffindor bold" href="/houses/common_room/gryffindor">Gryffindor</a></li>
-            <li><a class="slytherin bold" href="/houses/common_room/slytherin">Slytherin</a></li>
-            <li><a class="hufflepuff bold" href="/houses/common_room.hufflepuff">Hufflepuff</a></li>
-            <li><a class="ravenclaw bold" href="/houses/common_room/ravenclaw">Ravenclaw</a></li>
+            <li><a class="gryffindor bold" href="/houses/common_room/Gryffindor">Gryffindor</a></li>
+            <li><a class="slytherin bold" href="/houses/common_room/Slytherin">Slytherin</a></li>
+            <li><a class="hufflepuff bold" href="/houses/common_room/Hufflepuff">Hufflepuff</a></li>
+            <li><a class="ravenclaw bold" href="/houses/common_room/Ravenclaw">Ravenclaw</a></li>
         </ul>
     </div>
 </nav>
