complete gryffindor common room and refactor home pg css

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
             <div class="card-content col s12 m12 ">
                 <a
                 href="../houses/common_room/Gryffindor"
-                class="card col s6 m6 center-align gryffindor gryffindor-card waves-effect waves-light"
+                class="card col s6 m6 center-align gryffindor gryffindor-card house-card waves-effect waves-light"
             >
                 <div class="card-title bold">
                     Gryffindor
@@ -41,7 +41,7 @@
                 </a>
                 <a
                     href="../houses/common_room/Slytherin"
-                    class="card col s6 m6 center-align slytherin slytherin-card waves-effect waves-light"
+                    class="card col s6 m6 center-align slytherin house-card waves-effect waves-light"
                 >
                     <div class="card-title bold">
                         Slytherin
@@ -60,7 +60,7 @@
                 </a>
                 <a
                     href="../houses/common_room/Hufflepuff"
-                    class="card col s6 m6 center-align hufflepuff hufflepuff-card waves-effect waves-light"
+                    class="card col s6 m6 center-align hufflepuff house-card waves-effect waves-light"
                 >
                     <div class="card-title bold">
                         Hufflepuff
@@ -78,7 +78,7 @@
                 </a>
                 <a
                     href="../houses/common_room/Ravenclaw"
-                    class="card col s6 m6 center-align ravenclaw ravenclaw-card waves-effect waves-light"
+                    class="card col s6 m6 center-align ravenclaw ravenclaw-card house-card waves-effect waves-light"
                 >
                     <div class="card-title bold">
                         Ravenclaw
