--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,13 +21,7 @@ h3{
     background: #ebca96 !important;
 }
 
-.hogwarts_crest{
-    margin-top:  150px !important;
-}
 
-.hogwarts_card:hover{
-    background: #212121 !important;
-}
 
 .bold{
     font-weight: 700 !important;
@@ -87,13 +81,32 @@ dropdown-content li > a, .dropdown-content li > span{
 }
 
 /* Tables */
-
 .card{ 
     background-color: #ebca9688
 }
 
-/* Great Hall */
+/* Home Page */
+.hogwarts_crest{
+    margin-top:  150px !important;
+}
 
+.hogwarts_card:hover{
+    background: #212121 !important;
+}
+
+.house-card, .house-card p {
+    color: #ebca96 !important;
+}
+
+.gryffindor-card{
+    padding-bottom: 9px !important;
+}
+
+.ravenclaw-card{
+    padding-bottom: 22px !important;
+}
+
+/* Great Hall */
 .gh_room{
     margin: 0 !important;
     background: url(../images/great_hall.jpg) center center no-repeat !important;
@@ -116,24 +129,22 @@ dropdown-content li > a, .dropdown-content li > span{
 
 
 /* Gryffindor */
-
-/* sidenav */
 .gryffindor:hover{
     background: #740001 !important;
 }
 
-/* Home Page */
-.gryffindor-card, .gryffindor-card p {
-    color: #ebca96 !important;
-}
-
-.gryffindor-card{
-    padding-bottom: 9px !important;
-}
-
 /* Common Room */
+.Gryffindor_data a, .Gryffindor_data tr{
+    color: #740001;
+}
+
+.Gryffindor_data th{
+    color: #ae0001;
+    text-transform: uppercase;
+}
+
 .Gryffindor_data{
-    background: #740001 !important;
+    background: #740001aa !important;
     border: solid 3px #d3a625 !important;
 }
 
@@ -149,18 +160,12 @@ dropdown-content li > a, .dropdown-content li > span{
 
 .Gryffindor_img{
     background: #d3a625 !important;
+    border: solid 3px #740001 !important;
 }
 
 /* Sytherin */
-
-/* Sidenav */
 .slytherin:hover{
     background: #1a472a !important;
-}
-
-/* Home Page */
-.slytherin-card, .slytherin-card p {
-    color: #ebca96 !important;
 }
 
 /* Common Room */
@@ -184,27 +189,12 @@ dropdown-content li > a, .dropdown-content li > span{
 }
 
 /* Hufflepuff */
-
-
-
-/* Sidenav */
 .hufflepuff:hover{
     color:#3b2f24 !important;
     background: #fff4b1 !important;
-    
-}
-
-/* Home Page */
-.hufflepuff-card {
-    color: #ebca96 !important;
-}
-
-.hufflepuff-card p{
-    color:#ebca96 !important;
 } 
 
 /* Common Room */
-
 .Hufflepuff_table_right{
     float: right !important;
     margin-right: 40px !important;
@@ -230,23 +220,11 @@ dropdown-content li > a, .dropdown-content li > span{
 }
 
 /* Ravenclaw */
-
-/* Sidenav */
 .ravenclaw:hover{
     background: #0e1a40 !important;
 }
 
-/* Home Page */
-.ravenclaw-card, .ravenclaw-card p {
-    color: #ebca96 !important;
-}
-
-.ravenclaw-card{
-    padding-bottom: 22px !important;
-}
-
 /* Common Room */
-
 .Ravenclaw_table_right{
     float: right !important;
     margin-right: 40px !important;
