--- a/views/houses/common_room.ejs
+++ b/views/houses/common_room.ejs
@@ -8,7 +8,7 @@
             </div>
         </div>
         <div class=" col center row s12 m12">
-           <div class="card <%= room%>_table_right <%= room %>_data bold col s12 m4">
+           <div class="card <%= room%>_table <%= room %>_data bold col s12 m4">
                 <% if(charData.length != 0) { %>
                 <table class="card-content card center striped">
                     <thead>
