--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
 
-<div class="row">
+<div class="row home">
+    <h3 class="row center">Tap Crest To Enter</h3>
     <div class="hogwarts_crest col s12 m5 ">
-        <div class="card col s12 m12">
+        <div class="card card-base col s12 m12">
             <div class="card-content col s12 m12">
                 <a
                 href="/great_hall"
-                class="card col s12 m12 center-align hogwarts_card waves-effect waves-light"
+                class="card col s12 m12 center-align house-card hogwarts_card waves-effect waves-light"
             >
                 <div>
                     <img
@@ -18,8 +19,8 @@
             </div>
         </div>
     </div>
-    <div class="col s12 m7 ">
-        <div class="card col s12 m12 ">
+    <div class="col  s12 m7 ">
+        <div class="card col card-base s12 m12 ">
             <div class="card-content col s12 m12 ">
                 <a
                 href="../houses/common_room/Gryffindor"
@@ -98,5 +99,5 @@
             </div>
         </div>
     </div>
+    
 </div>
-<h3 class="row center">Tap To Enter.</h3>
