--- a/views/add_person.ejs
+++ b/views/add_person.ejs
@@ -1,6 +1,6 @@
 <h3>Add New Person</h3>
-<div class="row">
-    <form action="/houses" method="POST" class="col s12">
+<div class=" row">
+    <form action="/houses" method="POST" class="card card-base col s12 m6 offset-m3">
         <div class="row col m12">
             <div class="input-field">
                 <input type="text" id="name" name="name">
@@ -60,12 +60,9 @@
                 <input type="text" id="image" name="image">
                 <label for="image">Image Url</label>
             </div>
+        </div>   
         </div>
-  
-           
-        
-        </div>
-        <div class="row">
+        <div class="row center">
             <input type="submit" value="Save" class="btn">
             <a href="../dashboard" class="btn orange">Cancel</a>
         </div>
