fix add_person/houses controller great_hall redirect

--- a/views/add_person.ejs
+++ b/views/add_person.ejs
@@ -64,7 +64,7 @@
         </div>
         <div class="row center">
             <input type="submit" value="Save" class="btn">
-            <a href="../dashboard" class="btn orange">Cancel</a>
+            <a href="../great_hall" class="btn orange">Cancel</a>
         </div>
     </form>
 </div>
